@@ -133,10 +133,8 @@ catiiop (char* string
 static CORBA::Boolean
 cat_iiop_profile (TAO_InputCDR& cdr);
 
-#if 0
 static CORBA::Boolean
 cat_sciop_profile (TAO_InputCDR& cdr);
-#endif /*if 0*/
 
 static CORBA::Boolean
 cat_uiop_profile (TAO_InputCDR& cdr);
@@ -282,17 +280,12 @@ catior (char* str
             ACE_DEBUG ((LM_DEBUG, "%}"));
           }
 
-// the SCIOR decoding is disabled in the main branch. This will be
-// enabled when SCTP_O branch is merged in.
-// gthaker@atl.lmco.com, Feb 11, 2003.
-#if 0
         else if (tag == TAO_TAG_SCIOP_PROFILE)
           {
             ACE_DEBUG ((LM_DEBUG, "%{"));
             continue_decoding = cat_sciop_profile (stream);
             ACE_DEBUG ((LM_DEBUG, "%}"));
           }
-#endif
 
         else if (tag == TAO_TAG_UIOP_PROFILE)
           {
@@ -1212,7 +1205,6 @@ cat_uiop_profile (TAO_InputCDR& stream)
   return 1;
 }
 
-#if 0
 static CORBA::Boolean
 cat_sciop_profile (TAO_InputCDR& stream)
 {
@@ -1303,7 +1295,6 @@ cat_sciop_profile (TAO_InputCDR& stream)
 
   return 1;
 }
-#endif /*if 0*/
 
 
 static CORBA::Boolean
